--- a/.github/workflows/snyk-security.yml
+++ b/.github/workflows/snyk-security.yml
@@ -54,10 +54,10 @@ jobs:
         # Use || true to not fail the pipeline
       - name: Snyk Code test
         run: snyk code test --sarif > snyk-code.sarif || true
-
-        # Runs Snyk Open Source (SCA) analysis and uploads result to Snyk.
-      - name: Snyk Open Source monitor
-        run: snyk monitor --all-projects
+# TODO: figure out how to enable monitor (project is already enabled in snyk dashboard)
+#        # Runs Snyk Open Source (SCA) analysis and uploads result to Snyk.
+#      - name: Snyk Open Source monitor
+#        run: snyk monitor --all-projects
 
 #        # Runs Snyk Infrastructure as Code (IaC) analysis and uploads result to Snyk.
 #        # Use || true to not fail the pipeline.
